2018-12-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish MinGW.org WSL-5.2 package set.

	* mingw32/mingw32-runtime.xml (download-host): Relocate to osdn.net
	(mingwrt-5.2-dev, mingwrt-5.2-dll, mingwrt-5.2-lic, mingwrt-5.2-man)
	(libmingwex-5.2-dev, libmingwex-5.2-dll-2, w32api-5.2-dev): Add
	references; also add references to each of...
	(mingwrt-5.1.1-dev, mingwrt-5.1.1-dll, mingwrt-5.1.1-lic)
	(mingwrt-5.1.1-man, libmingwex-5.1.1-dev, libmingwex-5.1.1-dll-0)
	(w32api-5.1.1-dev, mingwrt-5.1-dev, mingwrt-5.1-dll, mingwrt-5.1-lic)
	(mingwrt-5.1-man, libmingwex-5.1-dev, libmingwex-5.1-dll-0)
	(w32api-5.1.1-dev): ...these previously unmanaged releases; remove all
	references to earlier releases, which remain on sourceforge.net, but
	are not scheduled to be relocated to the osdn.net download host.
	* common/issue.log mingw32/issue.log: Update accordingly.

2018-01-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish MinGW.org WSL-5.0.2 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.0.2-dev, mingwrt-5.0.2-dll)
	(mingwrt-5.0.2-lic, mingwrt-5.0.2-man, libmingwex-5.0.2-dll-0)
	(libmingwex-5.0.2-dev, w32api-5.0.2-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2018-01-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade to correct malformed libmpfr.a

	* mingw32/mingw32-mpfr.xml (mpfr, libmpfr): Add 3.1.5-2 release;
	this removes references to libgmp.dll.a from libmpfr.a, correctly
	replacing them with references to static libgmp.a
	* common/issue.log mingw32/issue.log: Update accordingly.

2017-09-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Eliminate libgcc_s_dw2-1.dll dependencies in GMP DLLs.

	* mingw32/mingw32-gmp.xml (gmp-6.1.2-2): Add release references.
	(libgmp-6.1.2-2-dll-10, libgmpxx-6.1.2-2-dll-4): Likewise; these
	represent the DLL component packages rebuilt with -static-libgcc.
	* common/issue.log mingw32/issue.log: Update accordingly.
